--- a/front-page.html
+++ b/front-page.html
@@ -32,34 +32,81 @@
 
 </head>
 <body>
-<header class="header">
-  <div class="container">
+
+<header class="header style2 wow animate fadeInUp">
+  <div class="hdr-top-sec">
+    <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <div class="header-inr clearfix">
-            <div class="hdr-lft">
-              <div class="logo">
-                <a href="#"><img src="assets/images/logo.png"></a>
-              </div>
+        <div class="col-sm-12">
+          <div class=" clearfix"> 
+            <div class="hdr-top-lft">
+              <a href="#">My Account</a>
             </div>
-            <div class="hdr-rgt">
-              <nav class="main-nav">
-                <ul class="clearfix">
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                </ul>
-              </nav>
+            <div class="hdr-top-rgt">
+              <span>Call Us:<a href="#"> 001-1234-88888</a></span>
+              <span>Location:<a href="#"> 4145 98 Street NW, Edmonton. AB. CA. T6E 5N5.</a></span>
             </div>
           </div>
         </div>
       </div>
+    </div>  
+  </div>       
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="header-inr clearfix">
+          <div class="header-logo-controller">
+            <div class="header-logo">
+              <a href="#"><img src="assets/images/logo.jpg"></a>
+            </div>
+          </div>
+          <div class="hdr-rgt">
+            <div class="mmenu-opener main-nav-opener">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <div class="hdr-socilal">
+              <ul class="ulc">
+                <li>
+                  <a href="#" target="_blank">
+                    <i class="fa fa-twitter"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank">
+                    <i class="fa fa-facebook"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank">
+                    <i class="fa fa-pinterest"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank">
+                    <i class="fa fa-instagram"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>            
+            <nav class="main-nav">
+              <ul class="clearfix ulc">   
+                <li><a href="#">home</a></li>
+                <li><a href="#">producten</a></li>
+                <li><a href="#">service & parts</a></li>
+                <li><a href="#">over ons</a></li>
+                <li><a href="#">levering</a></li>
+                <li><a href="#">uw offerte</a></li>
+                <li><a href="#">contact</a></li>
+              </ul>
+            </nav>            
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</header>
+</header><!-- end header-->
 
 <section class="main-content">
   <div class="container">
@@ -74,9 +121,6 @@
   </div>    
 </section>
 
-<div class="">
-  <div id="mapID" class="" data-latitude="23.7749" data-longitude="90.3657" style="width:100%; height:295px"></div>
-</div>
 
 
 <footer class="footer-wrp">
