--- a/front-page.html
+++ b/front-page.html
@@ -33,74 +33,40 @@
 </head>
 <body>
 
-<header class="header style2 wow animate fadeInUp">
-  <div class="hdr-top-sec">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class=" clearfix"> 
-            <div class="hdr-top-lft">
-              <a href="#">My Account</a>
-            </div>
-            <div class="hdr-top-rgt">
-              <span>Call Us:<a href="#"> 001-1234-88888</a></span>
-              <span>Location:<a href="#"> 4145 98 Street NW, Edmonton. AB. CA. T6E 5N5.</a></span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>  
-  </div>       
+<header class="header style2">    
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
         <div class="header-inr clearfix">
-          <div class="header-logo-controller">
+          <div class="header-left">
             <div class="header-logo">
               <a href="#"><img src="assets/images/logo.jpg"></a>
             </div>
           </div>
           <div class="hdr-rgt">
-            <div class="mmenu-opener main-nav-opener">
-              <span></span>
-              <span></span>
-              <span></span>
+            <div class="hdr-rgt-addr text-right">
+              <a href="#"><img src="assets/images/hdr-mail-icon.jpg" alt="">info@topspininternational.nl</a>
+              <a href="#"><img src="assets/images/hdr-cell-icon.jpg" alt="">0599 648 999</a>
             </div>
-            <div class="hdr-socilal">
-              <ul class="ulc">
-                <li>
-                  <a href="#" target="_blank">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" target="_blank">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" target="_blank">
-                    <i class="fa fa-pinterest"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" target="_blank">
-                    <i class="fa fa-instagram"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>            
-            <nav class="main-nav">
-              <ul class="clearfix ulc">   
-                <li><a href="#">home</a></li>
-                <li><a href="#">producten</a></li>
-                <li><a href="#">service & parts</a></li>
-                <li><a href="#">over ons</a></li>
-                <li><a href="#">levering</a></li>
-                <li><a href="#">uw offerte</a></li>
-                <li><a href="#">contact</a></li>
-              </ul>
-            </nav>            
+            <div class="hdr-main-menu-controlar clearfix">
+              <div class="mmenu-opener main-nav-opener">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>           
+              <nav class="main-nav text-right">
+                <ul class="clearfix ulc">   
+                  <li><a href="#">home</a></li>
+                  <li><a href="#">producten</a></li>
+                  <li><a href="#">service & parts</a></li>
+                  <li><a href="#">over ons</a></li>
+                  <li><a href="#">levering</a></li>
+                  <li><a href="#">uw offerte</a></li>
+                  <li><a href="#">contact</a></li>
+                </ul>
+              </nav>                  
+            </div>
+        
           </div>
         </div>
       </div>
