--- a/front-page.html
+++ b/front-page.html
@@ -37,7 +37,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <div class="header-inr clearfix">
+        <div class="header-top clearfix">
           <div class="header-left">
             <div class="header-logo">
               <a href="#"><img src="assets/images/logo.jpg"></a>
@@ -72,30 +72,219 @@
       </div>
     </div>
   </div>
-</header><!-- end header-->
+  <div class="hdr-btm-links">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <ul class="clearfix ulc">   
+            <li><a href="#">Montageliften</a></li>
+            <li><a href="#">Kanaalliften </a></li>
+            <li><a href="#">Glasliften</a></li>
+            <li><a href="#">Glasrobots</a></li>
+            <li><a href="#">Glaszuigers</a></li>
+            <li><a href="#">Glastransporters</a></li>
+          </ul>                    
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="hdr-btm-bq">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="hdr-btm-bq-innr">
+            <a href="#">home</a>     
+          </div>                          
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 
-<section class="main-content">
+
+<section class="pro-grd-sec-wrp">
   <div class="container">
       <div class="row">
-        <div class="col-md-6">
-
-        </div>
-        <div class="col-md-6">
-
+        <div class="col-12">
+          <div class="pro-grd-sec-innr">
+            <ul class="clearfix ulc">
+              <li>
+                <div class="pro-grd-main">
+                  <img src="assets/images/pro-grd-img-001.jpg" alt="">
+                  <div class="pro-grd-des text-white">
+                    <h3>Montageliften</h3>
+                    <span>Til tot maar liefst 180kg.</span>                  
+                  </div> 
+                  <a href="#" class="overlay-link"> </a> 
+                </div>
+              </li>
+              <li>
+                <div class="pro-grd-main">
+                  <img src="assets/images/pro-grd-img-002.jpg" alt="">
+                  <div class="pro-grd-des text-white">
+                    <h3>KANAALLIFTEN</h3>
+                    <span>Til tot maar liefst 500kg.</span>                  
+                  </div> 
+                  <a href="#" class="overlay-link"> </a> 
+                </div>
+              </li>
+              <li>
+                <div class="pro-grd-main">
+                  <img src="assets/images/pro-grd-img-003.jpg" alt="">
+                  <div class="pro-grd-des text-white">
+                    <h3>GLASLIFTEN</h3>
+                    <span>Glas verplaatsen tot 400kg.</span>                  
+                  </div> 
+                  <a href="#" class="overlay-link"> </a> 
+                </div>
+              </li>
+              <li>
+                <div class="pro-grd-main">
+                  <img src="assets/images/pro-grd-img-004.jpg" alt="">
+                  <div class="pro-grd-des text-white">
+                    <h3>GLASROBOTS</h3>
+                    <span>Veel soorten en prijsklasses.</span>                  
+                  </div> 
+                  <a href="#" class="overlay-link"> </a> 
+                </div>
+              </li>
+              <li>
+                <div class="pro-grd-main">
+                  <img src="assets/images/pro-grd-img-005.jpg" alt="">
+                  <div class="pro-grd-des text-white">
+                    <h3>GLASZUIGERS</h3>
+                    <span>Hanteerd glas tot 1000kg.</span>                  
+                  </div> 
+                  <a href="#" class="overlay-link"> </a> 
+                </div>
+              </li>
+              <li>
+                <div class="pro-grd-main">
+                  <img src="assets/images/pro-grd-img-006.jpg" alt="">
+                  <div class="pro-grd-des text-white">
+                    <h3>GLASTRASNPORTERS</h3>
+                    <span>Handig en degelijk.</span>                  
+                  </div> 
+                  <a href="#" class="overlay-link"> </a> 
+                </div>
+              </li>
+              <li>
+                <div class="pro-grd-main">
+                  <img src="assets/images/pro-grd-img-007.jpg" alt="">
+                  <div class="pro-grd-des text-white">
+                    <h3>PLATENLIFTEN</h3>
+                    <span>Hijs platen tot 5,1m hoogte.</span>                  
+                  </div> 
+                  <a href="#" class="overlay-link"> </a> 
+                </div>
+              </li>
+              <li>
+                <div class="pro-grd-main">
+                  <img src="assets/images/pro-grd-img-008.jpg" alt="">
+                  <div class="pro-grd-des text-white">
+                    <h3>POWERTOOLS</h3>
+                    <span>Ontdek de innovatieve powertools.</span>                  
+                  </div> 
+                  <a href="#" class="overlay-link"> </a> 
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
   </div>    
 </section>
 
 
+<section class="glassworker-sec-wrp">
+  <div class="glassworker-sec-main">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="glassworker-sec-innr">
+            <div class="glassworker-img">
+              <img src="assets/images/machine-img.png" alt="">
+            </div>
+            <div class="glassworker-des text-white">
+              <div class="glassworker-des-head text-uppercase">
+                <h1>Glassworker 425 Offroad High Lifter</h1>
+                <h3>Dé nieuwe generatie in glasrobots. </h3>               
+              </div>
+              <div class="glassworker-des-main">
+                <p>De Glassworker GW425 Offroad HL is de krachtigste en 
+                veiligste glasrobot in zijn klasse. Hij is uitgevoerd met sterke 
+                voorwielaandrijving en bredere geprofileerde luchtbanden 
+                en kan tot maximaal 425kg liften.</p> 
+                <p>Alle vacuümtechniek zit voor in de glaskop, waardoor deze 
+                360°gedraaid kan worden en er geen vacuümslangen meer
+                in de weg zitten of klem kunnen raken. </p>
+                <p>De mast kan 2x 900mm telescoperen. De glaskop is een-
+                voudig aan te passen aan de vorm en het gewicht van de <br>
+                last. Dit zonder dat er gereedschap benodigd is. </p>
+                <ul class="ulc font-weight-bold">
+                  <li>Meer informatie over de Glassworker 425 offroad.</li>
+                  <li>Bekijk alle glasrobots.</li>
+                </ul>                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>  
+  </div>      
+</section>
+
+
+<section class="pagebuilder-sec-1" style="min-height: 330px;">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="pagebuilder-sec-1-innr text-uppercase">
+          <h1>Pagebuilder content - the h1 is with caps!</h1>
+          <h2>h2 also caps</h2>
+          <span>pagebuilder</span>
+        </div>
+      </div>
+    </div>
+  </div>    
+</section>
+
+
+<section class="pagebuilder-sec-2" style="background-color:#d9d9d9; min-height: 495px;">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="pagebuilder-sec-1-innr text-uppercase">
+          <h1>Pagebuilder 100% width block just like the wegmetkalk.nl site with an 100% <br> bg image</h1>
+        </div>
+      </div>
+    </div>
+  </div>    
+</section>
+
+
+<section class="pagebuilder-sec-3" style="min-height: 445px;">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="pagebuilder-sec-1-innr text-uppercase">
+          <h1>Pagebuilder content - the h1 is with caps!</h1>
+          <h2>h2 also caps</h2>
+          <span>pagebuilder</span>
+        </div>
+      </div>
+    </div>
+  </div>    
+</section>
+
 
 <footer class="footer-wrp">
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-          <div class="ftr-col">
-            <div></div>
-          </div>
+        <div class="ftr-col">
+          <div></div>
+        </div>
       </div>
     </div>
   </div> 
