--- a/category-page.html
+++ b/category-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home page</title>
+	<title>category page</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -74,7 +74,8 @@
                   <li><a href="#">contact</a></li>
                 </ul>
               </nav>                  
-            </div>        
+            </div>
+        
           </div>
         </div>
       </div>
@@ -110,180 +111,100 @@
 </header>
 
 
-<section class="pro-grd-sec-wrp">
+<section class="product-cat-sec">
   <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="pro-grd-sec-innr">
-            <ul class="clearfix ulc">
+    <div class="row">
+      <div class="col-12">
+        <div class="cat-controller product-des-controller">
+          <h1>GLASliften, van handige tilhulp tot offroad robotrijder</h1>
+          <p>Hieronder vindt u een verkorte opsomming van ons assortiment aan glasliften en glasmontageliften. Klik op de onderstaande glasliften om naar de juiste glaslift pagina te gaan. Staat de glaslift die u zoekt er niet bij, kijk dan ook nog eens bij onze overige montageliften, glasrobots en materiaalliften. Uiteraard kunt u ons natuurlijk ook altijd even bellen voor advies over de gewenste montagelift.</p>
+          <hr/>
+          <div class="product-cat-block-wrp">
+            <ul class="ulc">
+
               <li>
-                <div class="pro-grd-main">
-                  <img src="assets/images/pro-grd-img-001.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>Montageliften</h3>
-                    <span>Til tot maar liefst 180kg.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
+                <div class="pro-cat-block-head">
+                  <ul class="ulc clearfix">
+                    <li>
+                      <img src="assets/images/cat-img-icon-01.png" alt="">
+                      <h2>Glaslift CA-400 GL</h2>
+                    </li>
+                    <li>
+                      <span>Bruto prijs:</span>
+                      <strong>33.085,-</strong>
+                      <span class="clearfix"></span>
+                    </li>
+                    <li>
+                      <a href="#">Product weergeven </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="pro-cat-block-des">
+                  <p>Tekstveld die je kunt <strong>veranderen</strong> naar wens zoals bijvoorbeeld een beknopte omschrijving. Hier een voorbeeld. Onze prachtige Glassworker 425 beschikt over een accurange van 2 uur continu werken en kan maar liefst <strong>6500mm</strong> de hoogte in met een maximale load van <strong>950kg.</strong></p>
                 </div>
               </li>
+
               <li>
-                <div class="pro-grd-main">
-                  <img src="assets/images/pro-grd-img-002.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>KANAALLIFTEN</h3>
-                    <span>Til tot maar liefst 500kg.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
+                <div class="pro-cat-block-head">
+                  <ul class="ulc clearfix">
+                    <li>
+                      <img src="assets/images/cat-img-icon-02.png" alt="">
+                      <h2>Glaslift EVO 3500TS</h2>
+                    </li>
+                    <li>
+                      <span>Bruto prijs:</span>
+                      <strong> 4.085,-</strong>
+                      <span class="clearfix"></span>
+                    </li>
+                    <li>
+                      <a href="#">Product weergeven </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="pro-cat-block-des">
+                  <p>Tekstveld die je kunt <strong>veranderen</strong> naar wens zoals bijvoorbeeld een beknopte omschrijving. Hier een voorbeeld. Onze prachtige Glassworker 425 beschikt over een accurange van 2 uur continu werken en kan maar liefst <strong>6500mm</strong> de hoogte in met een maximale load van <strong>950kg.</strong> <br>There are also possibilitys that the text has 3 or more lines like here, then the padding after the last line must be the same like everywhere.</p>
                 </div>
               </li>
+
               <li>
-                <div class="pro-grd-main">
-                  <img src="assets/images/pro-grd-img-003.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>GLASLIFTEN</h3>
-                    <span>Glas verplaatsen tot 400kg.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
+                <div class="pro-cat-block-head">
+                  <ul class="ulc clearfix">
+                    <li>
+                      <img src="assets/images/cat-img-icon-03.png" alt="">
+                      <h2>Glaslift CA-400 GL</h2>
+                    </li>
+                    <li>
+                      <span>Bruto prijs:</span>
+                      <strong>600,-</strong>
+                      <span class="clearfix"></span>
+                    </li>
+                    <li>
+                      <a href="#">Product weergeven </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="pro-cat-block-des">
+                <p>uiterst compacte, <strong>lichtgewicht montagelift,</strong> snel in positie te brengen. De lift is <strong>voorzien van een normaal montageplateau</strong> zodat ook bv. buitenzonwering of een airco-unit. Inclusief glaskop voorzien van 4 glaszuigers en uitschuifbare ondersteuning <strong>voor glasplaten tot 400cm.</strong> </p>
                 </div>
               </li>
-              <li>
-                <div class="pro-grd-main">
-                  <img src="assets/images/pro-grd-img-004.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>GLASROBOTS</h3>
-                    <span>Veel soorten en prijsklasses.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
-                  <img src="assets/images/pro-grd-img-005.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>GLASZUIGERS</h3>
-                    <span>Hanteerd glas tot 1000kg.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
-                  <img src="assets/images/pro-grd-img-006.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>GLASTRASNPORTERS</h3>
-                    <span>Handig en degelijk.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
-                  <img src="assets/images/pro-grd-img-007.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>PLATENLIFTEN</h3>
-                    <span>Hijs platen tot 5,1m hoogte.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
-                  <img src="assets/images/pro-grd-img-008.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>POWERTOOLS</h3>
-                    <span>Ontdek de innovatieve powertools.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
+
             </ul>
           </div>
-        </div>
-      </div>
-  </div>    
-</section>
 
+          <hr/>
 
-<section class="glassworker-sec-wrp">
-  <div class="glassworker-sec-main">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="glassworker-sec-innr">
-            <div class="glassworker-img">
-              <img src="assets/images/machine-img.png" alt="">
-            </div>
-            <div class="glassworker-des text-white">
-              <div class="glassworker-des-head text-uppercase">
-                <h1>Glassworker 425 Offroad High Lifter</h1>
-                <h3>Dé nieuwe generatie in glasrobots. </h3>               
-              </div>
-              <div class="glassworker-des-main">
-                <p>De Glassworker GW425 Offroad HL is de krachtigste en 
-                veiligste glasrobot in zijn klasse. Hij is uitgevoerd met sterke 
-                voorwielaandrijving en bredere geprofileerde luchtbanden 
-                en kan tot maximaal 425kg liften.</p> 
-                <p>Alle vacuümtechniek zit voor in de glaskop, waardoor deze 
-                360°gedraaid kan worden en er geen vacuümslangen meer
-                in de weg zitten of klem kunnen raken. </p>
-                <p>De mast kan 2x 900mm telescoperen. De glaskop is een-
-                voudig aan te passen aan de vorm en het gewicht van de <br>
-                last. Dit zonder dat er gereedschap benodigd is. </p>
-                <ul class="ulc font-weight-bold">
-                  <li>Meer informatie over de Glassworker 425 offroad.</li>
-                  <li>Bekijk alle glasrobots.</li>
-                </ul>                
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>  
-  </div>      
-</section>
-
-
-<section class="pagebuilder-sec-1" style="min-height: 330px;">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="pagebuilder-sec-1-innr text-uppercase">
-          <h1>Pagebuilder content - the h1 is with caps!</h1>
-          <h2>h2 also caps</h2>
-          <span>pagebuilder</span>
-        </div>
+          <h1>CATEGORY PAGE &nbsp; - PAGEBUILDER FOOTER CONTENT</h1>
+          <span>Hier zou je nog meer teksten kunnen proppen wanneer nodig.</span>
+        </div>                          
       </div>
     </div>
-  </div>    
+  </div>
 </section>
 
-
-<section class="pagebuilder-sec-2" style="background-color:#d9d9d9; min-height: 495px;">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="pagebuilder-sec-1-innr text-uppercase">
-          <h1>Pagebuilder 100% width block just like the wegmetkalk.nl site with an 100% <br> bg image</h1>
-        </div>
-      </div>
-    </div>
-  </div>    
-</section>
-
-
-<section class="pagebuilder-sec-3" style="min-height: 445px;">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="pagebuilder-sec-1-innr text-uppercase">
-          <h1>Pagebuilder content - the h1 is with caps!</h1>
-          <h2>h2 also caps</h2>
-          <span>pagebuilder</span>
-        </div>
-      </div>
-    </div>
-  </div>    
-</section>
+<!-- -- Gap markup--- -->
+<div class="gap" data-value='100' data-md='50' data-xs='40' data-sm='30' data-xxs='20'></div>
+<div class="margin" data-value='100'></div>
+<div class="padding" data-value='100'></div>
 
 
 <footer class="footer-wrp">
