--- a/front-page.html
+++ b/front-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
 	<title>Home page</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-<header class="header">    
+<header class="header">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
@@ -43,44 +43,81 @@
               <a href="#"><img src="assets/images/logo.jpg"></a>
             </div>
           </div>
-          <div class="hdr-rgt">
-            <div class="hdr-rgt-addr text-right">
-              <a href="#"><img src="assets/images/hdr-mail-icon.jpg" alt="">info@topspininternational.nl</a>
-              <a href="#"><img src="assets/images/hdr-cell-icon.jpg" alt="">0599 648 999</a>
+          <div class="header-right clearfix">
+            <div class="hide-md">
+              <div class="hdr-rgt-addr text-right">
+                <a href="#"><img src="assets/images/hdr-mail-icon.jpg" alt="">info@topspininternational.nl</a>
+                <a href="#"><img src="assets/images/hdr-cell-icon.jpg" alt="">0599 648 999</a>
+              </div>
+              <div class="hdr-main-menu-controlar clearfix">         
+                <nav class="main-nav text-right">
+                  <ul class="clearfix ulc">   
+                    <li><a href="#">home</a></li>
+                    <li class="menu-item-has-children">
+                      <a href="#">producten</a>
+                      <ul class="sub-menu ulc">
+                        <li><a href="#">Sub menu item</a></li>
+                        <li><a href="#">Sub menu item</a></li>
+                        <li><a href="#">Sub menu item</a></li>
+                        <li><a href="#">Sub menu item</a></li>
+                        <li><a href="#">Sub menu item</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#">service & parts</a></li>
+                    <li><a href="#">over ons</a></li>
+                    <li><a href="#">levering</a></li>
+                    <li><a href="#">uw offerte <span class="notification-cls">2</span></a></li>
+                    <li><a href="#">contact</a></li>
+                  </ul>
+                </nav>                  
+              </div>              
             </div>
-            <div class="hdr-main-menu-controlar clearfix">
-              <div class="mmenu-opener main-nav-opener">
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>           
-              <nav class="main-nav text-right">
-                <ul class="clearfix ulc">   
+            <div class="hdr-rgt-md-addr show-md">
+              <ul class="ulc clearfix">
+                <li><a href="#"><img src="assets/images/hdr-md-home-icon.png" alt=""></a></li>
+                <li><a href="#"><img src="assets/images/hdr-md-mail-icon.png" alt=""></a></li>
+                <li><a href="#"><img src="assets/images/hdr-md-phn-icon.png" alt=""></a></li>
+              </ul>
+            </div>
+            <div class="home-bnr-md-nav-bar-controller show-md">
+              <div class="md-menu-btn-bar clearfix">
+                <div class="md-menu-humberger-btn">
+                  <span><img src="assets/images/humberger-icon.png" alt=""></span>
+                  <strong>Menu</strong>
+                </div>
+              </div>
+            </div>
+            <div class="md-popup-main-menu-wrap ">
+              <nav class="md-popup-main-nav clearfix">
+                <ul class="clearfix">
                   <li><a href="#">home</a></li>
                   <li class="menu-item-has-children">
-                    <a href="#">producten</a>
+                    <a href="#">Producten</a>
                     <ul class="sub-menu ulc">
-                      <li><a href="#">Sub menu item</a></li>
-                      <li><a href="#">Sub menu item</a></li>
-                      <li><a href="#">Sub menu item</a></li>
-                      <li><a href="#">Sub menu item</a></li>
-                      <li><a href="#">Sub menu item</a></li>
+                      <li><a href="#">kanaalliften</a></li>
+                      <li><a href="#">glasliften</a></li>
+                      <li><a href="#">glasrobots</a></li>
+                      <li><a href="#">glaszuigers</a></li>
+                      <li><a href="#">glastransporters</a></li>
                     </ul>
                   </li>
-                  <li><a href="#">service & parts</a></li>
-                  <li><a href="#">over ons</a></li>
-                  <li><a href="#">levering</a></li>
-                  <li><a href="#">uw offerte</a></li>
-                  <li><a href="#">contact</a></li>
+                  <li><a href="#">SERVICE & PARTS</a></li>
+                  <li><a href="#">Over ons</a></li>
+                  <li><a href="#">lEVERING</a></li>
+                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">Offerte lijst <span class="notification-cls">2</span></a></li>
                 </ul>
-              </nav>                  
-            </div>        
+              </nav>
+              <div class="md-menu-popup-close-btn">
+                <span>X</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="hdr-btm-links">
+  <div class="hdr-btm-links hide-md">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -96,110 +133,129 @@
       </div>
     </div>
   </div>
-  <div class="hdr-btm-bq">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="hdr-btm-bq-innr">
-            <a href="#">home</a>     
-          </div>                          
-        </div>
+</header>
+
+<div class="hdr-btm-bq">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="hdr-breadcrumbs">
+          <ul>           
+            <li><a href="#">Home</a></li>
+          </ul>
+        </div>     
       </div>
     </div>
   </div>
-</header>
+</div>
 
 
 <section class="pro-grd-sec-wrp">
   <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="pro-grd-sec-innr">
-            <ul class="clearfix ulc">
-              <li>
-                <div class="pro-grd-main">
+    <div class="row">
+      <div class="col-12">
+        <div class="pro-grd-sec-innr">
+          <ul class="clearfix ulc">
+            <li>
+              <div class="pro-grd-main mHc">
+                <div class="pro-grd-img">
                   <img src="assets/images/pro-grd-img-001.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>Montageliften</h3>
-                    <span>Til tot maar liefst 180kg.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
+                </div>                
+                <div class="pro-grd-des text-white">
+                  <h2>Montageliften</h2>
+                  <span>Til tot maar liefst 180kg.</span>                  
+                </div> 
+                <a href="#" class="overlay-link"> </a> 
+              </div>
+            </li>
+            <li>
+              <div class="pro-grd-main mHc">
+                <div class="pro-grd-img">
                   <img src="assets/images/pro-grd-img-002.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>KANAALLIFTEN</h3>
-                    <span>Til tot maar liefst 500kg.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
+                </div>                
+                <div class="pro-grd-des text-white">
+                  <h2>KANAALLIFTEN</h2>
+                  <span>Til tot maar liefst 500kg.</span>                  
+                </div> 
+                <a href="#" class="overlay-link"> </a> 
+              </div>
+            </li>
+            <li>
+              <div class="pro-grd-main mHc">
+                <div class="pro-grd-img">
                   <img src="assets/images/pro-grd-img-003.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>GLASLIFTEN</h3>
-                    <span>Glas verplaatsen tot 400kg.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
+                </div>                
+                <div class="pro-grd-des text-white">
+                  <h2>GLASLIFTEN</h2>
+                  <span>Glas verplaatsen tot 400kg.</span>                  
+                </div> 
+                <a href="#" class="overlay-link"> </a> 
+              </div>
+            </li>
+            <li>
+              <div class="pro-grd-main mHc">
+                <div class="pro-grd-img">
                   <img src="assets/images/pro-grd-img-004.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>GLASROBOTS</h3>
-                    <span>Veel soorten en prijsklasses.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
+                </div>                
+                <div class="pro-grd-des text-white">
+                  <h2>GLASROBOTS</h2>
+                  <span>Veel soorten en prijsklasses.</span>                  
+                </div> 
+                <a href="#" class="overlay-link"> </a> 
+              </div>
+            </li>
+            <li>
+              <div class="pro-grd-main mHc">
+                <div class="pro-grd-img">
                   <img src="assets/images/pro-grd-img-005.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>GLASZUIGERS</h3>
-                    <span>Hanteerd glas tot 1000kg.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
+                </div>                
+                <div class="pro-grd-des text-white">
+                  <h2>GLASZUIGERS</h2>
+                  <span>Hanteerd glas tot 1000kg.</span>                  
+                </div> 
+                <a href="#" class="overlay-link"> </a> 
+              </div>
+            </li>
+            <li>
+              <div class="pro-grd-main mHc">
+                <div class="pro-grd-img">
                   <img src="assets/images/pro-grd-img-006.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>GLASTRASNPORTERS</h3>
-                    <span>Handig en degelijk.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
+                </div>                
+                <div class="pro-grd-des text-white">
+                  <h2>GLASTRASNPORTERS</h2>
+                  <span>Handig en degelijk.</span>                  
+                </div> 
+                <a href="#" class="overlay-link"> </a> 
+              </div>
+            </li>
+            <li>
+              <div class="pro-grd-main mHc">
+                <div class="pro-grd-img">
                   <img src="assets/images/pro-grd-img-007.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>PLATENLIFTEN</h3>
-                    <span>Hijs platen tot 5,1m hoogte.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
                 </div>
-              </li>
-              <li>
-                <div class="pro-grd-main">
+                <div class="pro-grd-des text-white">
+                  <h2>PLATENLIFTEN</h2>
+                  <span>Hijs platen tot 5,1m hoogte.</span>                  
+                </div> 
+                <a href="#" class="overlay-link"> </a> 
+              </div>
+            </li>
+            <li>
+              <div class="pro-grd-main mHc">
+                <div class="pro-grd-img">
                   <img src="assets/images/pro-grd-img-008.jpg" alt="">
-                  <div class="pro-grd-des text-white">
-                    <h3>POWERTOOLS</h3>
-                    <span>Ontdek de innovatieve powertools.</span>                  
-                  </div> 
-                  <a href="#" class="overlay-link"> </a> 
-                </div>
-              </li>
-            </ul>
-          </div>
+                </div>                
+                <div class="pro-grd-des text-white">
+                  <h2>POWERTOOLS</h2>
+                  <span>Ontdek de innovatieve powertools.</span>                  
+                </div> 
+                <a href="#" class="overlay-link"> </a> 
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
+    </div>
   </div>    
 </section>
 
@@ -216,7 +272,7 @@
             <div class="glassworker-des text-white">
               <div class="glassworker-des-head text-uppercase">
                 <h1>Glassworker 425 Offroad High Lifter</h1>
-                <h3>Dé nieuwe generatie in glasrobots. </h3>               
+                <h2>Dé nieuwe generatie in glasrobots. </h2>             
               </div>
               <div class="glassworker-des-main">
                 <p>De Glassworker GW425 Offroad HL is de krachtigste en 
